--- a/en/index.html
+++ b/en/index.html
@@ -1,2 +1,1 @@
-<!doctype html><html lang=en><head><title>https://geekifan.github.io/zero-academic-page/</title>
-<link rel=canonical href=https://geekifan.github.io/zero-academic-page/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://geekifan.github.io/zero-academic-page/"></head></html>
+<!doctype html><html lang=en><head><title>https://Fredreic1849.github.io/zero-academic-page-yuming/</title><link rel=canonical href=https://Fredreic1849.github.io/zero-academic-page-yuming/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://Fredreic1849.github.io/zero-academic-page-yuming/"></head></html>
